overflow solved

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -53,5 +53,8 @@ $bg: rgb(236, 235, 233);
       padding-left: 0;
     }
 
+    &__copy {
+      text-align: center;
+    }
   }
 }
